Automatically keep score for guessing-game
